Temporarily disable new builds role, and skip if latest isn't done yet or download url isn't present, increase interval to 5 minutes